# cbc-nlp

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
example/notebooks/: rss_preprocessing_pipeline.ipynb
example/python/content/: iterate_fs.py
example/python/rss_scraper/: extract_spiegel_s3.py
example/sample_data/: rss_tokens.txt
examples/notebooks/: convert_wiki_simple.ipynb  getting_started.ipynb  poll_rss_feed.ipynb  simple_word2vec.ipynb
examples/python/content/: iterate_fs.py  iterate_s3.py
examples/python/rss_scraper/: extract_spiegel_fs.py  extract_spiegel_s3.py
source/cbc/: content.py  pipeline.py
source/cbc/nlp/: base.py  rss_scraping.py  translate.py  w2v_test_cases.py  word2vec_tools.py
source/consileon/nlp/: content.py  pipeline.py  rss_scraping.py
src/cbc/: __init__.py  content.py  pipeline.py
src/cbc/nlp/: base.py  pdftools.py  w2v_const.py  w2v_test_framework.py  wikitools.py
test/cbc/: test_content.py  test_pipeline.py
